// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorList renders all authors if they are less than the limit wihtout "et al." 1`] = `
<div
  className="__InlineList__"
>
  <ul
    className="separate-items"
  >
    <li
      key="Map { \\"full_name\\": \\"Test, Guy 1\\" }"
    >
      <AuthorLink
        fullName="Test, Guy 1"
        recordId={12345}
      />
    </li>
    <li
      key="Map { \\"full_name\\": \\"Test, Guy 2\\" }"
    >
      <AuthorLink
        fullName="Test, Guy 2"
        recordId={12345}
      />
    </li>
  </ul>
</div>
`;

exports[`AuthorList renders only  3 authors and suffixes "et al." if passed more 1`] = `
<InlineList
  extractKey={[Function]}
  items={
    Immutable.List [
      Immutable.Map {
        full_name: "Test, Guy 1",
      },
      Immutable.Map {
        full_name: "Test, Guy 2",
      },
      Immutable.Map {
        full_name: "Test, Guy 3",
      },
    ]
  }
  label={null}
  renderItem={[Function]}
  separateItems={true}
  suffix={
    <span>
       et al.
    </span>
  }
/>
`;

exports[`AuthorList renders only limited (prop) authors and suffixes "et al." if passed more 1`] = `
<div
  className="__InlineList__"
>
  <ul
    className="separate-items"
  >
    <li
      key="Map { \\"full_name\\": \\"Test, Guy 1\\" }"
    >
      <AuthorLink
        fullName="Test, Guy 1"
        recordId={12345}
      />
    </li>
    <li
      key="Map { \\"full_name\\": \\"Test, Guy 2\\" }"
    >
      <AuthorLink
        fullName="Test, Guy 2"
        recordId={12345}
      />
    </li>
  </ul>
  <span>
     et al.
  </span>
</div>
`;
